<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sssssconcept"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:fontFamily="@font/comicbd"
            android:gravity="center"
            android:text="@string/vi"
            android:textSize="20sp"
            android:textColor="#FF000000"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="username"
            android:background="@drawable/custombutton"
            android:fontFamily="@font/segoepr"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textColorHint="#FF000000"
            tools:ignore="HardcodedText,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/custombutton"
            android:fontFamily="@font/segoepr"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:textColorHint="#FF000000" />
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_signed_in"
            android:textColor="#FF000000"
            android:hint="@string/keep_me_signed_in"
            android:onClick="onCheckBoxClicked"
            android:layout_marginTop="15dp"
            android:buttonTint="#FF000000"
            />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:onClick="onButtonClick"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FF000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:onClick="onButtonClick"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FF000000"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>